--- a/FrostedGlass.css
+++ b/FrostedGlass.css
@@ -650,7 +650,7 @@ textarea {
 #app-mount .sidebar__5e434:after {
   background: transparent;
 }
-#app-mount .sidebar__5e434 .container__2637a, #app-mount .sidebar__5e434 .privateChannels_e6b769, #app-mount .sidebar__5e434 .scroller__99e7c {
+#app-mount .sidebar__5e434 .container__2637a, #app-mount .sidebar__5e434 .privateChannels_e6b769, #app-mount .sidebar__5e434 .scroller__99e7c .scroller__629e4 {
   background-color: transparent;
 }
 #app-mount .sidebar__5e434 [role=list] > div[style="width: 100%; height: 84px; visibility: hidden;"] {
